# myhome-vision

./: .gitignore  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: anonymization.py  circuit_breaker.py  config.py  logging.py
backend/app/models/: schemas.py
backend/app/providers/: __init__.py  base.py  comfyui.py  kling.py  registry.py  runway.py  viggle.py
backend/app/services/: job_manager.py  over_generation.py  quality_gate.py
comfyui/workflows/: morning_coffee_v0.json
docs/: comfyui_setup.md  github_setup.md  phase0_plan.md
eval/: arcface.py  pose.py  runner.py  uncanny.py
scripts/: bootstrap.sh
tests/: test_anonymization.py  test_circuit_breaker.py  test_over_generation.py  test_providers.py  test_quality_gate.py
