[project]
name = "myhome-vision"
version = "0.0.1"
description = "MyHome Vision — AI video composition service for condominium buyers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "sisuiss" },
]

# 実行時依存は backend/requirements.txt 側で管理します。
# pyproject は開発ツール（ruff / mypy / pytest）の設定ハブとして使います。

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend", "tests", "eval"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "PL",   # pylint
    "RUF",  # Ruff-specific
]
ignore = [
    "E501",   # line too long (format 側で処理)
    "PLR0913", # too many arguments
    "PLR2004", # magic value
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR0913", "PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
files = ["backend/app"]
strict = false   # Phase 0 は warn-only。Phase 1 で true に切替
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false  # Phase 1 で true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-ra --strict-markers"
markers = [
    "slow: mark a test as slow (deselect with '-m \"not slow\"')",
    "integration: requires external provider (Viggle / Runway / ComfyUI)",
    "gpu: requires GPU (MimicMotion / AnimateDiff 実機)",
]

[tool.coverage.run]
source = ["backend/app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
